--- a/static/styles/admindashboard.css
+++ b/static/styles/admindashboard.css
@@ -14,6 +14,14 @@ body,html{
     height:10%;
 }
 
+.h-5{
+    height:5%;
+}
+
+.h-95{
+    height:95%;
+}
+
 .sidenav {
   height: 100%;
   width: 0;
