created API documentation on admin dashboard.

--- a/templates/admindash.html
+++ b/templates/admindash.html
@@ -21,6 +21,7 @@
     <a href="/admin/dashboard/users">users</a>
     <a href="/admin/dashboard/licenses">licenses</a>
     <a href="/admin/dashboard/plans">plans</a>
+    <a href="/admin/dashboard/documentation">api</a>
     <p class="footer fixed-bottom">logged in as {{ current_user.id }}</p>
 </div>
 <div id="main" class="container-fluid h-10 bg-dark text-white">
