--- a/templates/admindocs.html
+++ b/templates/admindocs.html
@@ -45,8 +45,8 @@
                         <br>
                         ------------------
                         <br>
-                        retrieves information relating to the license parsed into the paramaters of the request,
-                        denoted by {license}. If the request authenticates successfully, a JSON object on the specfic
+                        Retrieves information relating to the license parsed into the parameters of the request,
+                        denoted by {license}. If the request authenticates successfully, a JSON object of the specfic
                         license will be returned.
                     </div>
                     <div class="mt-5 mb-3">
@@ -56,8 +56,8 @@
                         <br>
                         ------------------
                         <br>
-                        updates the HWID and devicename for a given license, specified in the request. Both can be set
-                        to None in the case the user is attempting to log out (unbind) of their device. If the request
+                        Updates the HWID and devicename for a given license, specified in the request. Both can be set
+                        to None in the case where the user is attempting to log out (unbind) of their device. If the request
                         is valid
                         and authenticated successfully, it will return a JSON object of the updated license and a
                         suitable status.
@@ -67,7 +67,7 @@
             <div class="card mt-3 text-dark">
                 <div class="card-body">
                     <h5 class="card-title">API Wrappers for quick implentation</h5>
-                    <h6 class="card-subtitle">Includes an example implementation of the API and provides an API wrapper
+                    <h6 class="card-subtitle">Files include an example implementation of the authentication mechanism and provide an API wrapper
                         class for the language of your project. Click to download.</h6>
                     <form method="post">
                         <div class="card-text"><br><u>
