fixed front end bug

--- a/templates/admindash.html
+++ b/templates/admindash.html
@@ -37,7 +37,7 @@
             <h2 class="text-white">Welcome to the administrator panel!</h2>
             <h5 class="text-white muted mt-3"> Your statistics at a glance...</h5>
             <div class="row h-5"></div>
-            <div class="row h-95 mt-2 text-dark">
+            <div class="row mt-2 h-40 text-dark">
                 <div class="col-4">
                     <div class="card h-100">
                         <div class="card-body">
