--- a/templates/admindash.html
+++ b/templates/admindash.html
@@ -63,9 +63,21 @@
                     </div>
                 </div>
             </div>
+            <div class="row mt-2 h-40 text-dark">
+                <div class="col-6">
+                    <div class="card mt-3">
+                        <img src="{{url_for('static', filename='images/licenses.png')}}" alt="Image">
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card mt-3">
+                        <img src="{{url_for('static', filename='images/users.png')}}" alt="Image">
+                    </div>
+                </div>
+            </div>
+
         </div>
         <div class="col-3">
-
         </div>
     </div>
     <div class="container-fluid h-10 bg-dark text-white ">
