slight front end changes

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -35,12 +35,13 @@
                             <br>
                     </div>
                 {% endif %}
+                <div class="container-fluid">
                 <div class="row mt-2">
                     <div class="col-sm-1"></div>
                     <div class="col-sm-5">
 
                         <!--License management widget-->
-                        <div class="card">
+                        <div class="card h-100">
                             {% if not current_user.license.exists %}
                             <div class="card-body">
                                 <h5 class="card-title">No license currently bound</h5>
@@ -60,22 +61,22 @@
                                     <h5 class="card-title">License Information </h5>
                                     <p class="card-text">key: {{ current_user.license }} <br><a href="javascript:unbind()" class="muted">click to unbind from account {{current_user.id}}</a></p>
                                     <p class="card-text">status: not currently bound</p>
-                                    <a href="javascript:rescramble()" class="btn btn-primary">Re-scramble Key</a>
+                                    <a href="javascript:rescramble()" class="btn btn-primary mt-1">Re-scramble Key</a>
                                 </div>
                                 {% else %}
                                 <div class="card-body">
                                     <h5 class="card-title">License Information</h5>
                                     <p class="card-text">key: {{ current_user.license }} <br><a href="javascript:unbind()" class="muted">click to unbind from account {{current_user.id}}</a></p>
                                     <p class="card-text">status: bound to device {{ current_user.license.devicename}}</p>
-                                    <a href="javascript:unbinddevice()" class="btn btn-primary">Unbind from {{ current_user.license.devicename}}</a>
-                                    <a href="javascript:rescramble()" class="btn btn-primary">Re-scramble Key</a>
+                                    <a href="javascript:unbinddevice()" class="btn btn-primary mt-1">Unbind from {{ current_user.license.devicename}}</a>
+                                    <a href="javascript:rescramble()" class="btn btn-primary mt-1">Re-scramble Key</a>
                                 </div>
                                 {%endif%}
                             {%endif%}
                         </div>
                     </div>
                     <div class="col-sm-5">
-                        <div class="card">
+                        <div class="card h-100">
                             {% if not current_user.license.exists %}
                                 <div class="card-body">
                                     <h5 class="card-title">Account and Billing</h5>
@@ -96,6 +97,7 @@
                         </div>
                     </div>
                     <div class="col-sm-1"></div>
+                </div>
                 </div>
                 <div class="row mt-3">
                     <div class="col text-center">
