fixed front end sort function

--- a/templates/adminplans.html
+++ b/templates/adminplans.html
@@ -38,7 +38,7 @@
                 <table id="dbtable" class="table mb-3 px-2">
                     <thead class="thead-dark">
                     <tr class="clickable">
-                        <th scope="col" onclick="sortTable2(0)">#</th>
+                        <th scope="col" onclick="sortTable2(0, true)">#</th>
                         <th scope="col" onclick="sortTable2(1)">Name</th>
                         <th scope="col" onclick="sortTable2(2)">Renewal Interval</th>
                         <th scope="col" onclick="sortTable2(3)">Renewal Price</th>
