--- a/templates/adminlicenses.html
+++ b/templates/adminlicenses.html
@@ -38,7 +38,7 @@
                 <table id="dbtable" class="table mb-3 px-2">
                     <thead class="thead-dark">
                     <tr class="clickable">
-                        <th scope="col" onclick="sortTable2(0)">#</th>
+                        <th scope="col" onclick="sortTable2(0, true)">#</th>
                         <th scope="col" onclick="sortTable2(1)">License</th>
                         <th scope="col" onclick="sortTable2(2)">User</th>
                         <th scope="col" onclick="sortTable2(3)">Plan</th>
